<resources>
    <string name="app_name">Horizon FMS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserID</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This UserId is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_landing">LandingActivity</string>

    <!-- Strings Assigned to SharedPreferences -->
    <string name="user_name">User Name</string>
    <string name="user_pwd">user pwd</string>
    <string name="user_cd">user cd</string>
    <string name="preferences">preferences</string>
    <string name="employee_code">emp</string>
    <string name="assigned_code">assigned code</string>
    <string name="company_code">company code</string>
    <string name="task_number">Task Number</string>
    <string name="work_completed_code">work completed</string>
    <string name="work_progress_code">work progress</string>
    <string name="reported_date">date</string>
    <string name="reported_time">time</string>
    <string name="task_completed">false</string>
    <string name="call_number">Call Number</string>
    <string name="doc_number">Doc Number</string>
    <string name="building">Building</string>
    <string name="location">Location</string>
    <string name="reported_datetime">dateTime</string>
    <string name="building_code">Building code</string>
    <string name="location_code">location code</string>


    <!-- String related to landing page -->
    <string name="assigned_task">Assigned Task</string>
    <string name="task_status_update">Task Status Update</string>
    <string name="new_task">New tasks received</string>
    <string name="status_update">Task need status update</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="before_picture">Before Picture</string>
    <string name="After_picture">After Picture</string>
    <string name="Save">Save</string>
    <string name="Remark">Remarks</string>
    <string name="Start_Task">Start Task</string>
    <string name="newNotification">0</string>
    <string name="bool">1</string>
    <string name="ppm_work_order_no">PPM work order no</string>


    <!-- Strings related to other -->
    <string name="title_activity_login">Sign in</string>


    <string name="title_activity_assigned_task">AssignedTaskActivity</string>
    <string name="title_activity_task_status_update">TaskStatusUpdateActivity</string>
    <string name="title_activity_task_details">TaskDetailsActivity</string>

    <string name="title_activity_task_start">TaskStartActivity</string>
    <string name="title_activity_before_task">BeforeTaskActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="title_activity_multiple">MultipleActivity</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_close">CloseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_task_notification_title_template">New task: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_task_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_task_progress">TaskProgressActivity</string>
    <string name="title_activity_view_progress">ViewProgressActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_safty_rules">SaftyRulesActivity</string>
    <string name="title_activity_material_issue">MaterialIssueActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_add_material">AddMaterialActivity</string>
    <string name="title_activity_task_complete">TaskCompleteActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_status_change">StatusChangeActivity</string>
    <string name="title_activity_ppmwork_order_list">PPMWorkOrderListActivity</string>
</resources>
