<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.LandingActivity"
    tools:showIn="@layout/activity_landing">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/login_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/landingForm"
            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="date"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="16dp"
                    android:src="@drawable/icon" />


            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="30dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/notificationpanel"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_weight="-2"

                            android:src="@android:drawable/ic_popup_reminder" />

                        <TextView
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="Notifications"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/dot"
                            android:layout_height="wrap_content"
                            android:paddingLeft="50dp"
                            android:paddingRight="50dp"
                            android:singleLine="false"
                            android:text="•"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/notification"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"

                            android:paddingRight="10dp"
                            android:textColor="#FFFFFF" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/dot1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="50dp"
                            android:paddingRight="50dp"
                            android:singleLine="false"
                            android:text="•"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/notification1"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"

                            android:paddingRight="10dp"
                            android:textColor="#FFFFFF" />

                    </TableRow>

                </TableLayout>


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/assigned_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/ripple_15"
                    android:text="@string/assigned_task"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/task_status_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ripple_15"
                    android:text="@string/task_status_update"
                    android:textColor="#FFFFFF" />


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
